kubernetes/argo-system/argo-workflows/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: argo-system
  name: argo-workflows-server
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: https
  hostnames:
    - "workflows.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: argo-workflows-server
          port: 2746
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: argo-system
  name: argo-workflows-server-http-rediect
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: http
  hostnames:
    - "workflows.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
